--- a/index.html
+++ b/index.html
@@ -39,17 +39,18 @@
           <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 
           <li class="projeto-item">
-            <p>💲Conversor de Dolar</p>
+            <p>🔳Urna Eletronica</p>
           </li>
 
-          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="LYLzJzj" data-user="kau-maia" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-            <span>See the Pen <a href="https://codepen.io/kau-maia/pen/LYLzJzj">
-                Conversor de moedas - ID3</a> by Kauã Maia (<a href="https://codepen.io/kau-maia">@kau-maia</a>)
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="RwgvPWM" data-user="kau-maia" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/kau-maia/pen/RwgvPWM">
+                Urna eletronica.</a> by Kauã Maia (<a href="https://codepen.io/kau-maia">@kau-maia</a>)
               on <a href="https://codepen.io">CodePen</a>.</span>
-            <li class="projeto-item">
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 
-              <p>🔮Advinhe o número</p>
-            </li>
+          <p>🔮Advinhe o número</p>
+          </li>
           <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="dyRZeEd" data-user="kau-maia" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
             <span>See the Pen <a href="https://codepen.io/kau-maia/pen/dyRZeEd">
                 Adivinhação de números </a> by Kauã Maia (<a href="https://codepen.io/kau-maia">@kau-maia</a>)
@@ -58,11 +59,11 @@
           <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 
           <li class="projeto-item">
-            <p>🎬AluraFlix</p>
+            <p>Sistema de Login</p>
           </li>
-          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="eYRMjRW" data-user="kau-maia" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-            <span>See the Pen <a href="https://codepen.io/kau-maia/pen/eYRMjRW">
-                Aluraflix - dia 5</a> by Kauã Maia (<a href="https://codepen.io/kau-maia">@kau-maia</a>)
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="MWoRope" data-user="kau-maia" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/kau-maia/pen/MWoRope">
+                Sistema de login</a> by Kauã Maia (<a href="https://codepen.io/kau-maia">@kau-maia</a>)
               on <a href="https://codepen.io">CodePen</a>.</span>
           </p>
           <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
@@ -87,6 +88,15 @@
               on <a href="https://codepen.io">CodePen</a>.</span>
           </p>
           <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <li class="projeto-item">
+            <p>🧮Calculadora</p>
+          </li>
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="JjJqyXB" data-user="kau-maia" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/kau-maia/pen/JjJqyXB">
+                Calculadora</a> by Kauã Maia (<a href="https://codepen.io/kau-maia">@kau-maia</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
     </main>
   </div>
   <div class="Redes-Socias">
@@ -103,8 +113,3 @@
   </div>
 
 </body>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
-</html>
